correction align paragraph

--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@ main {
 #intro h1 {
   font-size: 1.8em;
 }
+#intro p {
+  text-align: left;
+}
 /* #intro img {
   width: 100%;
   border-radius: 1em;
@@ -54,7 +57,6 @@ main {
   border-left: 1.5px solid rgb(228, 199, 7);
   /* color to the left border */
   margin-top: 24px;
-  text-align: left;
   /* aligned text on the left */
   padding: 0 16px;
 }
